assets/css/styles.css
body {
    font-family: monospace, monospace;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 30px;
    padding: 20px;
}

main {
    width: 100%;
    max-width: 700px;
}

article {
    line-height: 1.5;
}

aside {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.author-image-container {
    text-align: center;
}

.author-image {
    width: 150px;
    height: 150px;
    border-radius: 50%;
}

.author-name {
    padding: 10px;
}

nav ul {
    list-style: none;
    margin: 0;
    padding: 0;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    gap: 20px;
}

